--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "bntree"
 version = "0.1.0"
 authors = ["Alexey Voznyuk <me@swizard.info>"]
+description = "Immutable B*-tree like data structure with layout optimized for sequential access"
+repository = "https://github.com/swizard0/bntree"
 edition = "2018"
 
 [dependencies]
