--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "bntree"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Alexey Voznyuk <me@swizard.info>"]
 description = "Immutable B*-tree like data structure with layout heavily optimized for sequential access"
 repository = "https://github.com/swizard0/bntree"
 edition = "2018"
 
 [dependencies]
+bincode = "^1.2"
+serde = "^1.0"
+serde_derive = "^1.0"
